# Python

./: README.md  calc.py  hello.py  input.py  pyproject.toml  python1.py  pytorch
OOPS/: Image.py  classes.py  classvariables.py  inheritance.py  magicmethods.py  methods.py
