[tool.poetry]
name = "poetry setting up"
version = "0.1.0"
description = "Help!!"
authors = ["therishabhmittal05 <rishabhmittal928@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
